--- a/privat/bjoern/DokuQuanti/content/Content.tex
+++ b/privat/bjoern/DokuQuanti/content/Content.tex
@@ -34,8 +34,8 @@
 \listoffigures % Abbildungsverzeichnis einfügen
 
 % Tabellenverzeichnis
-%\newpage
-%\listoftables % Tabellenverzeichnis einfügen
+\newpage
+\listoftables % Tabellenverzeichnis einfügen
 
 % Abkürzungsverzeichnis
 \newpage
