--- a/privat/bjoern/DokuQuanti/content/lib/Literatur.bib
+++ b/privat/bjoern/DokuQuanti/content/lib/Literatur.bib
@@ -26,3 +26,11 @@
   month = 	 {3},
   year = 	 {2010}
 }
+
+@booklet{GasnierStat,
+  title = 	 {Unterlagen zur Vorlesung Quantitative Forschungsmethoden (Statistik)},
+  author = 	 {Dr. Sylvie Gasnier},
+  address =  {FHDW Hannover, Freundalle 15, 30173 Hannover},
+  month = 	 {6},
+  year = 	 {2013}
+}
