--- a/privat/bjoern/DokuQuanti/content/pages/Quellenverzeichnis.tex
+++ b/privat/bjoern/DokuQuanti/content/pages/Quellenverzeichnis.tex
@@ -9,5 +9,5 @@
 
 \bibliographyLiteratur{\content/lib/Literatur} % Einfügen der Literatur
 %\bibliographyRecht{\content/lib/Recht} % Einfügen der Rechtsvorschriften
-%\bibliographyInternet{\content/lib/Internet} % Einfügen der Internetquellen
+\bibliographyInternet{\content/lib/Internet} % Einfügen der Internetquellen
 %\bibliographyUnternehmen{\content/lib/Unternehmen} % Einfügen der Unternehmensquellen
