--- a/privat/bjoern/DokuQuanti/content/lib/Internet.bib
+++ b/privat/bjoern/DokuQuanti/content/lib/Internet.bib
@@ -7,3 +7,44 @@
 	year = {2010},
 	url = {http://www.cio.de/knowledgecenter/server/alles_zu_virtualisierung/2255974/}
 }
+
+@online{wiki:ordinalskala,
+	title = {{Ordinalskala}},
+	author = {{Wikipedia - Die freie Enzyklopädie}},
+	month = 7,
+	year = {2013},
+	url = {https://de.wikipedia.org/wiki/Ordinalskala}
+}
+
+@online{wiki:nominalskala,
+	title = {{Nominalskala}},
+	author = {{Wikipedia - Die freie Enzyklopädie}},
+	month = 7,
+	year = {2013},
+	url = {https://de.wikipedia.org/wiki/Nominalskala}
+}
+
+@online{gabler:ordinalskala,
+	title = {{Ordinalskala}},
+	author = {{Gabler Wirtschaftslexikon}},
+	month = 7,
+	year = {2013},
+	url = {http://wirtschaftslexikon.gabler.de/Definition/ordinalskala.html}
+}
+
+@online{gabler:skalenniveau,
+	title = {{Skalenniveau}},
+	author = {{Gabler Wirtschaftslexikon}},
+	month = 7,
+	year = {2013},
+	url = {http://wirtschaftslexikon.gabler.de/Definition/skalenniveau.html}
+}
+
+@online{gabler:nominalskala,
+	title = {{Nominalskala}},
+	author = {{Gabler Wirtschaftslexikon}},
+	month = 7,
+	year = {2013},
+	url = {http://wirtschaftslexikon.gabler.de/Definition/nominalskala.html}
+}
+ 
