--- a/privat/bjoern/DokuQuanti/content/sections/Einleitung.tex
+++ b/privat/bjoern/DokuQuanti/content/sections/Einleitung.tex
@@ -3,11 +3,14 @@
 Im Rahmen des Master Studiums (M.Sc. Studiengang: Business Process Engineering) an der FHDW Hannover
 war es für die Studiengruppe \qq{HFP412} die Aufgabe, Inhalte und Hintergründe der Veranstaltung \qq{Quantitative Forschungsmethoden}\footnote{Dozentin: Frau Dr. Sylvie Gasnier} zu dokumentieren.
 
-\img[width=\relWidth{0.8}]{skalenniveaus.pdf}{Verschiedene Zahlen- oder Skalenniveaus}{img_skalenniveaus}
+\img[width=\relWidth{0.9}]{skalenniveaus.pdf}{Verschiedene Zahlen- oder Skalenniveaus}{img_skalenniveaus}
 
-Die vorliegende Ausarbeitung konzentriert sich auf das Thema \qq{Nominale und ordinale Merkmale} (siehe \refImg{img_skalenniveaus}). Die theoretischen Hintergründen werden anhand von praktischen Beispielen in Microsoft Excel untermauert. 
+Die vorliegende Ausarbeitung konzentriert sich auf den Zweig der qualitativen Skalen. Genauer das Thema der \qq{Nominal- und Ordinalskalen} (siehe \refImg{img_skalenniveaus}). 
+Die theoretischen Hintergründen werden anhand von praktischen Beispielen mit Hilfe von Microsoft Excel untermauert. 
 Als Datenquelle dient hierfür der Münchner Mietspiegel aus dem Jahre 2003\footnote{\url{http://data.ub.uni-muenchen.de/2/1/miete03.asc}}.
 
 Um die statistische Auswertung zu erleichtern, müssen einige Vorarbeiten geleistet werden. Zunächst müssen pro Merkmalsart die verschiedenen Ausprägungen 
 analysiert werden. Hierbei entstehen ein Codeplan und eine Datenmatrix, welche als Grundlage für die folgenden Auswertungen dient. 
-Auf die konkreten Ausprägungsarten wird zu einem späteren Zeitpunkt eingegangen.
+Auf die konkreten Ausprägungsarten wird zu einem späteren Zeitpunkt eingegangen. Um an die
+Ausprägungsarten herzuführen, werden in Abschnitt \ref{sec:defNot} zunächst Codeplan und Datenmatrix
+skizziert.
