--- a/privat/bjoern/DokuQuanti/content/sections/Protokoll_Bjoern.tex
+++ b/privat/bjoern/DokuQuanti/content/sections/Protokoll_Bjoern.tex
@@ -1,69 +1,192 @@
-\section{Nominale Merkmale}
+\section{Definition und Notationen}\label{sec:defNot}
+Die Menge aller für die Unterschung relevanten Merkmalsträger wird in den statistischen
+Wissenschaften als \qq{Grundgesamtheit} bezeichnet. Die Menge aller in der Untersuchung auftretenden
+Merkmalsträger wird \qq{Stichprobe} genannt. Die Gesamtheit aller Daten (Merkmale, Merkmalsträger
+und Merkmalsausprägungen) aus der Stichprobe wird als Beobachtungsdaten oder \qq{Urliste} bezeichnet
+(siehe dazu \refImg{img_grundgesamtheitStichprobe}) (vgl. \refLibLiteratur{GasnierStat}).
 
-\todo[Umformulieren]
-(1) Nominalskala: Dient lediglich der Klassifikation und Identifikation von Untersuchungsobjekten (z.B. Geschlecht: 1: männlich, 2: weiblich). 
-Die Analyse nominalskalierter Daten beschränkt sich auf Häufigkeitsanalysen. Vgl. http://wirtschaftslexikon.gabler.de/Definition/skalenniveau.html
-\todo[Umformulieren]
-Skala, bei der alternative Ausprägungen nur deren Verschiedenheit zum Ausdruck bringen; 
-z.B. besitzen die Merkmale Geschlecht oder Fakultätszugehörigkeit bei Studierenden eine Nominalskala.
-Vgl. http://wirtschaftslexikon.gabler.de/Definition/nominalskala.html
-\todo[Umformulieren]
+\img[width=\relWidth{0.9}]{grundgesamtheitStichprobe.pdf}{Zusammenhang zwischen Grundgesamtheit und
+Stichprobe}{img_grundgesamtheitStichprobe}
+ 
+Damit die erhobenen Daten von einem EDV System (z.B. Microsoft Excel oder SPSS) verarbeitet werden
+können, müssen diese zunächst aufbereitet werden. Das bedeutet, dass die Informationen, die
+beispielsweise in ausgefüllten Fragebögen enthalten sind, in Form einer Datenmatrix aufbereitet
+werden müssen. Dafür ist es außerdem wichtig, die einzelnen Fragen (Variablen) und Antworten
+(Ausprägungen) zu codieren. Hierbei sollte darauf geachtet werden, dass die Codierung vollständig
+ist. Es muss beispielsweise bedachte werden, dass eine Person die Antwort unter Umständen
+verweigern kann. Aus diesem Grund wird meist eine Kategorie \qq{missing value} hinzugefügt, welche
+dann in der Ausprägung z.B. den Wert \qq{0} erhält. 
+
+Die Datenmatrix setzt sich (mithilfe der Codierung) somit aus aus Merkmalsträgern (X-Achse) und
+den zugehörigen Ausprägungen des Merkmals (Y-Achse) zusammen (siehe
+\refImg{img_merkmaleAuspraegungen}).
+
+\img[width=\relWidth{0.5}]{merkmaleAuspraegungen.pdf}{Datenmatrix - Merkmale und
+Ausprägungen}{img_merkmaleAuspraegungen}
+
+Genauer besteht die Datenmatrix aus $m$ Merkmalsträgern: $j=1,...,m$ als Laufindex für den
+$j$-ten Merkmalsträger. Als $X$ wird das allgemeine Merkmal bezeichnet.
+
+$x_j$ bezeichnet die Ausprägung des Merkmals $X$ für den $j$-ten
+Merkmalsträger. 
+
+Die Datenreihe oder \qq{Urliste} (eine Spalte der Datenmatrix) für ein Merkmal $X$
+lautet dann: \[x_1, x_2 ,..., x_j ,..., x_{m-1},x_m\]
+
+Je nach Skalenniveau wird man mit dieser Urliste mehr oder weniger anfangen können. Die
+Daten des Münchner Mietspiegels von 2003 lassen sich für die in dieser Ausarbeitung
+behandelten Skalenniveaus (nominale und ordinale) problemlos als Datenmatrix verwenden.
+
+
+\section{Nominalskala}
+
+Die Nominalskala dient zur Klassifikation und Identifikation von Untersuchungsobjekten (z.B.
+die Merkmale Geschlecht oder Fakultätszugehörigkeit bei Studierenden). Die Analyse nominalskalierter
+Daten beschränkt sich auf Häufigkeitsanalysen (vgl. \refLibInternet{gabler:nominalskala} und
+\refLibInternet{gabler:skalenniveau}).
+
 Ein Merkmal skaliert nominal (v. lat. nomen \qq{Name} aus griech. onoma; Pl.: Nomina, auch Nomen), 
 wenn seine möglichen Ausprägungen zwar unterschieden werden können, aber keine natürliche Rangfolge aufweisen.
-\todo[Umformulieren]
-Ein nominal skalierendes Merkmal wird messbar gemacht durch eine Beschreibung von Kategorien,
+Ein solches Merkmal wird messbar gemacht durch eine Beschreibung von Kategorien,
 nach der jede Untersuchungseinheit (genau) einer Kategorie zugeordnet werden kann. 
-Das Ergebnis einer solchen Operationalisierung heißt dann eine Nominalskala. 
-Wegen des Fehlens der Ordnung ist dabei -skala (von lat. scalae ‚Leiter, Treppe‘) eigentlich nicht angemessen und 
-ist im Zusammenhang mit den anderen Skalenniveaus zu sehen.
+Das Ergebnis einer solchen Operationalisierung heißt dann \qq{Nominalskala}. 
+Wegen des Fehlens der Ordnung ist dabei -skala (von lat. scalae ‚Leiter, Treppe‘) eigentlich nicht
+angemessen und ist im Zusammenhang mit den anderen Skalenniveaus zu sehen (vgl.
+\refLibInternet{wiki:nominalskala}).
 
-
-Die formalen Bedingungen einer Nominalskala sind:
+Eine Nominalskala muss die folgenden Eigenschaften erfüllen:
 \begin{description}
-\item[Reflexivität] $a \sim a$. Jedes Objekt ist zu sich selbst äquivalent.
-\item[Symmetrie] $a \sim b \implies b \sim a$. Wenn $a$ zu $b$ äquivalent ist, dann ist auch $b$ äquivalent zu $a$ (und umgekehrt).
-\item[Transitivität] $a \sim b \land b \sim c \implies a \sim c$. Wenn $a$ zu $b$ äquivalent und $b$ zu $c$ äquivalent ist, dann ist $a$ äquivalent zu $c$.
-\item[Homomorphie] \todo[Umformulieren] Die Beschreibung der Kategorien muss so sein, dass die dadurch definierte Abbildung strukturerhaltend (homomorph) ist, dass also gleiche Objekte des empirischen Relativs einer Kategorie zugeordnet werden und ungleiche Objekte verschiedenen Kategorien.
+\item[Reflexivität:] $a \sim a$. Jedes Objekt ist zu sich selbst äquivalent.
+\item[Symmetrie:] $a \sim b \implies b \sim a$. Wenn $a$ zu $b$ äquivalent ist, dann ist auch $b$ äquivalent zu $a$ (und umgekehrt).
+\item[Transitivität:] $a \sim b \land b \sim c \implies a \sim c$. Wenn $a$ zu $b$ äquivalent und $b$ zu $c$ äquivalent ist, dann ist $a$ äquivalent zu $c$.
+\item[Homomorphie:] Die Beschreibung der Kategorien muss so erfolgen, dass die dadurch definierte Abbildung strukturerhaltend (homomorph) ist.
+\end{description}
+
+Beispiele für nominalskalierte Merkmale sind:
+\begin{description}
+  \item[Geschlecht:] männlich, weiblich
+  \item[Geburtsort:] Hannover, München, Berlin
+  \item[Religionszugehörigkeit:] evangelisch, katholisch, muslimisch
+  \item[Stadtbezirk:] Nordstadt, Südstadt, Oststadt, Weststadt, Mitte
 \end{description}
 
 
 
-
-
-
-
-
-
-Vgl. https://de.wikipedia.org/wiki/Nominalskala
-
-\todo[Einbauen]
-Beispiele für nominalskalierte Merkmale eines Menschen:
-Geschlecht: männlich, weiblich
-Geburtsort: Hamburg, Berlin, Heidenheim
-Religionszugehörigkeit: evangelisch, katholisch, muslimisch
-
-
-
 \subsection{Häufigkeitstabelle}
+Bei nominalen Merkmalen, können die vorhandenen Merkmalsausprägungen ($x_i,i=1,...,k$) aufgelistet
+und deren jeweilige Anzahl ($n_i$ = absolute Häufigkeiten) ermittelt werden.
+So entsteht eine Häufigkeitstabelle.
+
+Im Folgenden wird mit den Daten des Mietspiegels eine Häufigkeitstabelle bzgl. der Bezirke erstellt.
+
+\begin{enumerate}
+  \item Die Spalte \qq{bez} (Bezirke) kopieren, in ein neues Arbeitsblatt einfügen und anschließend
+  sortieren. Damit wird eine geordnete Urliste erzeugt.
+  \item Ein Blick auf den Filter verrät, dass 25 verschiedene Bezirke existieren.
+  \item Drei Spalten mit den Überschriften $x_i$ (vorhandene Ausprägungen), $n_i$ (Häufigkeiten) und
+  $\frac{n_i}{n}$ (Relative Häufigkeit) versehen.
+  \item Die Spalte $x_i$ mit Zahlen von 1 bis 25 versehen.
+  \item Die Spalte $n_i$ wird mit der Excel Funktion $\text{ZÄHLENWENN}$ versehen.
+  \[=\text{ZÄHLENWENN}(UrlisteBeginn:UrlisteEnde;Eintrag x_i)\] Beispielsweise sieht der
+  Eintrag für die Zelle $E4$ wie folgt aus (wobei die Urliste von $A2$ bis $A2054$ geht und
+  die Spalte $D$ die Überschrift $x_i$ trägt): \[=\text{ZÄHLENWENN}(A2:A2054;D4)=43\]
+  \item Die genannte Excel Formel wird für jede der 25 Ausprägungen verwendet, wobei Beginn und Ende
+  der Urliste gleich bleiben und sich nur der Eintrag $x_i$ verändert.
+  \item Die Spalte der Ausprägungen wird anschließend summiert und ergibt den Wert $2053$, welcher
+  die Anzahl der Datensätze aus der Urliste ist.
+  \item Durch das Teilen des Wertes der Häufigkeiten ($n_i$) durch die soeben
+  ausgerechnete Summe, errechnet sich die relative Häufigkeit. \[=Eintrag n_i/SummeHaeufigkeiten\]
+  Beispielsweise sieht der Eintrag für die Zelle $F4$ wie folgt aus (wobei in $E29$ die Summe der
+  Häufigkeiten steht): \[=E4/E29\]
+\end{enumerate} 
+
+\newpage
+Es ergibt sich die folgende Häufigkeitstabelle:
+
+\begin{table}[h]
+\caption{Häufigkeitstabelle für Bezirke} \label{tab:haeufigkeitenBez}
+\begin{center}
+\begin{tabular}{p{1.25cm}p{1.25cm}p{1.25cm}}
+\hline \hline
+\textbf{$x_i$} & \textbf{$n_i$} & \textbf{$\frac{n_i}{n}$}\\ 
+\hline
+1	&	43	&	2,1\% \\
+2	&	161	&	7,8\% \\
+3	&	132	&	6,4\% \\
+4	&	137	&	6,7\% \\
+5	&	139	&	6,8\% \\
+6	&	66	&	3,2\% \\
+7	&	69	&	3,4\% \\
+8	&	62	&	3,0\% \\
+9	&	177	&	8,6\% \\
+10	&	58	&	2,8\% \\
+11	&	70	&	3,4\% \\
+12	&	78	&	3,8\% \\
+13	&	98	&	4,8\% \\
+14	&	60	&	2,9\% \\
+15	&	43	&	2,1\% \\
+16	&	115	&	5,6\% \\
+17	&	67	&	3,3\% \\
+18	&	82	&	4,0\% \\
+19	&	106	&	5,2\% \\
+20	&	50	&	2,4\% \\
+21	&	56	&	2,7\% \\
+22	&	24	&	1,2\% \\
+23	&	14	&	0,7\% \\
+24	&	29	&	1,4\% \\
+25	&	117	&	5,7\% \\
+\hline
+$\Sigma$ & \textbf{2053}
+\end{tabular}
+\end{center}
+\label{default}
+\end{table}%  
+
 
 \subsection{Darstellung als Diagramm}
-Kreisdiagramm
-Balkendiagramm Quatsch (erklären warum\ldots)
+Nominale Merkmale, bzw. die Daten der Häufigkeitstabelle lassen sich ebenso gut als Kreisdiagramm
+darstellen. Säulendiagramme für die einzelnen Häufigkeiten und Treppenfunktionen für die kumulierten
+Häufigkeiten sind erst bei ordinalen, intervallskalierten oder diskreten Merkmalen sinnvoll (im
+nächsten Abschnitt wird im Zuge der ordinalen Merkmale genauer darauf eingegangen).
+
+Um ein Kreisdiagramm in Microsoft Excel darzustellen, müssen die folgenden Schritte durchlaufen
+werden:
+
+\begin{enumerate}
+  \item Spalten $x_i$ und $n_i$ der Häufigkeitstabelle markieren.
+  \item Auf \qq{Einfügen -> Kreisdiagramm} klicken.
+\end{enumerate}
+
+\img[width=\relWidth{0.8}]{nominalTorte.pdf}{Kreisdiagramm}{img_nominalTorte}
+
 
 \subsection{Messzahlen / Kennzahlen}
 
+Der Modus oder häufigster Wert
+Diese Maßzahl ist für alle Daten (mindestens nominal) anwendbar.
+Wie der Name schon sagt ist der MODUS (oder MODALWERT) für ordinale oder
+diskrete Merkmale die Ausprägung mit der höchster Häufigkeit.
+Bei stetigen Merkmalen wird die Mitte der Klasse mit der größten
+Häufigkeitsdichte als Modus bezeichnet. Man spricht in diesem Fall auch vom
+DICHTESTEN WERT.
+Idealerweise hat man nur ein Modus (UNIMODALE Verteilung). Haben zwei
+(oder mehr) Ausprägungen die gleiche höchste Häufigkeit/Dichte spricht man
+von einer BI- (oder MULTI-)MODALEN Verteilung.
+Sehr aussagefähig ist diese Maßzahl naturgegeben nicht!
 
-\section{Ordinale Merkmale}
+
+\section{Ordinalskala}
 \todo[Umformulieren]
 (2) Ordinalskala: Diese ordnet die Untersuchungsobjekte nach ihrem Rang (z.B. Rating A ist besser als Rating B), sagt jedoch nichts über das Ausmaß der Unterschiede aus. Zulässige mathematische Operationen bei ordinalskalierten Daten sind bspw. die Berechnung des Modus und des Medians.
-Vgl. http://wirtschaftslexikon.gabler.de/Definition/skalenniveau.html
+(vgl. \refLibInternet{gabler:skalenniveau}).
 
 Kurzerklärung:
 Möglichkeit der Reihung verschiedener Messgrößen.
 
 Ausführliche Erklärung:
-Rangskala; Skala, auf der alternative Ausprägungen neben Verschiedenheit auch eine Rangordnung zum Ausdruck bringen, z.B. Schulnote oder Intelligenzquotient.
-Vgl. http://wirtschaftslexikon.gabler.de/Definition/ordinalskala.html
+Rangskala; Skala, auf der alternative Ausprägungen neben Verschiedenheit auch eine Rangordnung zum
+Ausdruck bringen, z.B. Schulnote oder Intelligenzquotient (vgl.
+\refLibInternet{gabler:ordinalskala}).
 
 \todo[Umformulieren]
 Die Ordinalskala dient in der Statistik der Charakterisierung von (Zufalls-)Variablen mit Ausprägungen, zwischen denen eine natürliche Rangordnung besteht.[1] Ordinal-Variablen enthalten also Nominal-Informationen und auch Informationen über die Reihung (Ordnung) der Variablenwerte. Beobachtungen auf einem Merkmal mit ordinalem Messniveau können hinsichtlich dieses Merkmals gruppiert und ihrer Größe nach geordnet werden.
@@ -72,7 +195,7 @@ Werden die Merkmalsausprägungen (Kategorien) mit (Rang-)Zahlen (Ordnungsziffern
 
 Zusätzlich zu den Bedingungen zur Konstruktion einer Nominalskala erfordert die Konstruktion einer Ordinalskala die Eigenschaft der Trichotomie (Dreiteilung)\footnote{Diese Eigenschaft gilt in jeder total geordneten Menge.}:
 \begin{description}
-	\item[Trichotomie] Es gilt eine der folgenden Eigenschaften:
+	\item[Trichotomie:] Es gilt eine der folgenden Eigenschaften:
 		\begin{itemize}
 		  \item $a < b$
 		  \item $a = b$
@@ -80,26 +203,85 @@ Zusätzlich zu den Bedingungen zur Konstruktion einer Nominalskala erfordert die
 		\end{itemize} 
 \end{description}
 
+Nachfolgende Tabelle enthält Beispiele für ordinalskalierte Merkmale (vgl.
+\refLibInternet{wiki:ordinalskala}).
+\begin{description}
+  \item[Zufriedenheit mit einem Produkt:] sehr zufrieden > eher zufrieden > eher unzufrieden > sehr unzufrieden
+  \item[Schulische Leistung:] sehr gut > gut > befriedigend > ausreichend > mangelhaft > ungenügend
+  \item[Selbsteinstufung des Einkommens:] hoch > mittel > niedrig\footnote{Wird das Einkommen in
+  Klassen eingeteilt (z.B. 0 bis 999 Euro, 1000 bis 2000 Euro, über 2000 Euro), 
+  handelt es sich um ein ordinal skaliertes Merkmal. Wird dagegen der genaue Betrag erhoben und statistisch verarbeitet, liegt ein metrisches Merkmal vor. 
+  Da die Auskunftsbereitschaft bei der Angabe des genauen Einkommens geringer ist, wird in vielen
+  Umfragen auf eine Abfrage der Einkommensklassen zurückgegriffen.}
+  \item[Dienstrang beim Militär:] General > Major > Leutnant > Feldwebel > Unteroffizier > Gefreiter
+\end{description} 
 
 
-
-\todo[Einbauen]
-Nachfolgende Tabelle enthält Beispiele für ordinalskalierte Merkmale.
-Merkmal	Kategorien
-Dekubitusrisiko	geringes bis hohes Risiko nach der Norton-Skala
-Zufriedenheit mit einem Produkt	sehr zufrieden > eher zufrieden > eher unzufrieden > sehr unzufrieden
-Selbsteinstufung des Einkommens1	hoch > mittel > niedrig
-Schulische Leistung2	sehr gut > gut > befriedigend > ausreichend > mangelhaft > ungenügend
-Dienstrang beim Militär	General > Major > Leutnant > Feldwebel > Unteroffizier > Gefreiter
-1 Wird das Einkommen in Klassen eingeteilt (z. B. 0 bis 999 Euro, 1000 bis 2000 Euro, über 2000 Euro), handelt es sich um ein ordinal skaliertes Merkmal. Wird dagegen der genaue Betrag erhoben und statistisch verarbeitet, liegt ein metrisches Merkmal vor. Da die Auskunftsbereitschaft bei der Angabe des genauen Einkommens geringer ist, wird in vielen Umfragen auf eine Abfrage der Einkommensklassen zurückgegriffen.
-2 Schulnoten werden oft so verwendet, als seien sie intervallskaliert, indem z. B. der Durchschnitt berechnet wird. Problematisch wird es, wenn eine solche Verwendung ernste Konsequenzen hat, z. B. bei der Beurteilung verschiedener Unterrichtsmethoden.
-
-
-
-Vgl. https://de.wikipedia.org/wiki/Ordinalskala 	
 
 
 \subsection{Häufigkeitstabelle}
+Im Folgenden wird mit den Daten des Mietspiegels eine Häufigkeitstabelle bzgl. der Wohnqualität
+erstellt. Zuvor stellen wir jedoch fest, dass die Wohnqualität über zwei Merkmale (Wohngut und
+Wohnbest) festgestellt wurde. Diese müssen zunächst zusammengeführt werden, damit sich die Codierungen nicht
+überdecken (Wohngut(2) = Wohnbest(1)). 
+
+\begin{enumerate}
+  \item Die neue zusammengeführte Spalte \qq{wohnquali} in ein neues Arbeitsblatt kopieren und
+  sortieren.
+  \item Ein Blick auf den Filter verrät, dass 3 verschiedene Wohnqualitäten existieren.
+  \item Fünf Spalten mit den Überschriften $x_i$ (vorhandene Ausprägungen), $n_i$
+  (Häufigkeiten), $\frac{n_i}{n}$ (Relative Häurigkeit), $S_i$ (Kumulierte Häufigkeit) und $F_i$
+  (Kumulierte relative Häufigkeit) versehen.
+  \item Die Spalte $x_i$ mit Zahlen von 0 bis 2 versehen.
+  \item Die Spalte $n_i$ wird mit der Excel Funktion $\text{ZÄHLENWENN}$ versehen.
+  \[=\text{ZÄHLENWENN}(UrlisteBeginn:UrlisteEnde;Eintrag x_i)\] Beispielsweise sieht der
+  Eintrag für die Zelle $E4$ wie folgt aus (wobei die Urliste von $A2$ bis $A2054$ geht und
+  die Spalte $D$ die Überschrift $x_i$ trägt): \[=\text{ZÄHLENWENN}(A2:A2054;D4)=43\]
+  \item Die genannte Excel Formel wird für jede der 25 Ausprägungen verwendet, wobei Beginn und Ende
+  der Urliste gleich bleiben und sich nur der Eintrag $x_i$ verändert.
+  \item Die Spalte der Ausprägungen wird anschließend summiert und ergibt den Wert $2053$, welcher
+  die Anzahl der Datensätze aus der Urliste ist.
+  \item Durch das Teilen des Wertes der Häufigkeiten ($n_i$) durch die soeben
+  ausgerechnete Summe, errechnet sich die relative Häufigkeit. \[=Eintrag n_i/SummeHaeufigkeiten\]
+  Beispielsweise sieht der Eintrag für die Zelle $F4$ wie folgt aus (wobei in $E29$ die Summe der
+  Häufigkeiten steht): \[=E4/E29\]
+\end{enumerate} 
+
+\newpage
+Es ergibt sich die folgende Häufigkeitstabelle:
+Häufigkeit der Wohnqualität bestimmen\ldots
+
+
+
+\begin{table}[h]
+\caption{Häufigkeitstabelle für Wohnqualität} \label{tab:excel_bsp}
+\begin{center}
+\begin{tabular}{p{1.25cm}p{1.25cm}p{1.25cm}p{1.25cm}p{1.25cm}}
+\hline \hline
+\textbf{$x_i$} & \textbf{$n_i$} & \textbf{$\frac{n_i}{n}$} & \textbf{$S_i$} & \textbf{$F_i$}\\ 
+\hline
+0 & 1205 & 58,7\% & 1205 & 58,7\% \\
+1 & 803 & 39,1\% & 2008 & 97,8\% \\
+2 & 45 & 2,2\% & 2053 & 100\% \\
+\hline
+$\Sigma$ & \textbf{2053}
+\end{tabular}
+\end{center}
+\label{default}
+\end{table}% 
+
+
+Mit wohngut\ldots
+xi	0	1	2
+ni	1205	803	45
+ni/n	58,7%	39,1%	2,2%
+Si	1205	2008	2053
+Fi	58,7%	97,8%	100,0%
+
+
+xi	0	1	2
+Fi	59%	98%	100%
+
 
 \subsection{Darstellung als Diagramm}
 Darstellung der Häufigkeit (Balken- / Säulendiagramm)
@@ -109,7 +291,46 @@ Darstellung der kumulierten Häufigkeit (Verteilfunktion: Treppenfunktion)
 \subsection{Messzahlen / Kennzahlen}
 
 Perzentile - Prozentpunkte (Quantile) als Lagemaße
+Prozentpunkte oder Quantile xw
+Ab einem mindestens ordinalen (nicht nominalen) Skalenniveau können
+Prozentpunkte allgemein bestimmt werden. Dies kann aus der Rangwertreihe
+exakt oder aus einer Graphik oder einer Häufigkeitstabelle annähernd gemacht
+werden.
+1. Verfahren für Einzeldaten (Rangwertreihe)
+Def.: Man definiert PROZENTPUNKTE Xw als jeweils erste Punte der
+Rangwertreihe, die den Anteil w hinter sich haben. Spezielle Prozentpunkte
+sind der MEDIAN (W=0,5) und die QUARTILE (w=0,25 oder w=0,75).
+Praktisch: Man multipliziert den Stichprobenumfang mit dem Anteil w. Das
+Ergebnis ergibt die Stelle des Prozentpunktes in der Rangwertreihe und dieser
+wird abgelesen. Spezielle Prozentpunkte werden in den nächsten Abschnitten
+vorgestellt.
+
+Median	0	 = 1027. Wert der geordneten Reihe			
+					
+unteres Quartil	0	d.h.  25% der Wohnungen haben die Standard-Qualität			
+oberes Quartil	1	d.h.  75% der Wohnungen haben höchstens die gute Qualität			
+
+
+
 
 Median
+2. Der Median oder Zentralwert
+Def.: der MEDIAN oder Zentralwert oder 50%-PUNKT X0,5 = P0,5 ist der Punkt,
+der die Beobachtungswerte halbiert. Bei geradem n ist der Median =
+Durchschnitt aus den beiden mittleren benachbarten Werten. Bei ungeraden
+Werten der mittlere Punkt. Man muß garantieren, daß F(x0,5) kleiner gleich 0,5.
  
 Quartile
+Die Quartile
+Def.: Das UNTERE ODER ERSTE QUARTIL kommt nach den untersten oder ersten
+25% der Werte.
+x0,25 = Q P der Werte d unterhalb 1 = 0,25 =:25% sin , 75%derWerte sind oberhalb
+Ist n durch 4 teilbar, dann muß man wie beim Median den Durchschnitt aus
+dem n/4-ten Wert und sein Nachbarn berechnen. Ist dies nicht der Fall (z.B.
+n=15, 15/4=3,75, dann ist Q1=der 4. Wert)
+Def.: Das 2. oder mittlere Quartil ist = dem Median,
+Def.: und das DRITTE ODER OBERE QUARTIL trennt die untersten 75% Werte
+von den obersten 25%. 0,75 3 0,75 x = Q = P . Ist n durch 4 teilbar, , dann muß man
+wie beim Median den Durchschnitt aus dem 3n/4-ten Wert und sein Nachbarn
+berechnen. Ist dies nicht der Fall (z.B. n=15, 3*15/4=11,25, dann ist Q3=der
+12. Wert) dann ist Q3 der nächste Wert.
