update... entwurf 1 abgeschickt...
git-svn-id: file:///home/nik/repositories/svn/master@763 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/privat/bjoern/DokuQuanti/content/lib/Internet.bib
+++ b/privat/bjoern/DokuQuanti/content/lib/Internet.bib
@@ -11,15 +11,50 @@
 @online{wiki:ordinalskala,
 	title = {{Ordinalskala}},
 	author = {{Wikipedia - Die freie Enzyklopädie}},
-	month = 7,
+	month = jul,
 	year = {2013},
 	url = {https://de.wikipedia.org/wiki/Ordinalskala}
 }
 
+@online{wiki:kennzahl,
+	title = {{Kennzahl}},
+	author = {{Wikipedia - Die freie Enzyklopädie}},
+	month = jul,
+	year = {2013},
+	url = {https://de.wikipedia.org/wiki/Kennzahl}
+}
+
+@online{wiki:kumhaeufigkeit,
+	title = {{Kumulierte Häufigkeit}},
+	author = {{Wikipedia - Die freie Enzyklopädie}},
+	month = jul,
+	year = {2013},
+	url = {https://de.wikipedia.org/wiki/Kumulative_H%C3%A4ufigkeit}
+}
+
+@online{wiki:relhaeufigkeit,
+	title = {{Relative Häufigkeit}},
+	author = {{Wikipedia - Die freie Enzyklopädie}},
+	month = jul,
+	year = {2013},
+	url = {https://de.wikipedia.org/wiki/Relative_H%C3%A4ufigkeit}
+}
+
+@online{wiki:quantil,
+	title = {{Quantil}},
+	author = {{Wikipedia - Die freie Enzyklopädie}},
+	month = jul,
+	year = {2013},
+	url = {https://de.wikipedia.org/wiki/Quantil}
+}
+
+
+
+
 @online{wiki:nominalskala,
 	title = {{Nominalskala}},
 	author = {{Wikipedia - Die freie Enzyklopädie}},
-	month = 7,
+	month = jul,
 	year = {2013},
 	url = {https://de.wikipedia.org/wiki/Nominalskala}
 }
@@ -27,7 +62,7 @@
 @online{gabler:ordinalskala,
 	title = {{Ordinalskala}},
 	author = {{Gabler Wirtschaftslexikon}},
-	month = 7,
+	month = jul,
 	year = {2013},
 	url = {http://wirtschaftslexikon.gabler.de/Definition/ordinalskala.html}
 }
@@ -35,7 +70,7 @@
 @online{gabler:skalenniveau,
 	title = {{Skalenniveau}},
 	author = {{Gabler Wirtschaftslexikon}},
-	month = 7,
+	month = jul,
 	year = {2013},
 	url = {http://wirtschaftslexikon.gabler.de/Definition/skalenniveau.html}
 }
@@ -43,7 +78,7 @@
 @online{gabler:nominalskala,
 	title = {{Nominalskala}},
 	author = {{Gabler Wirtschaftslexikon}},
-	month = 7,
+	month = jul,
 	year = {2013},
 	url = {http://wirtschaftslexikon.gabler.de/Definition/nominalskala.html}
 }
