--- a/privat/bjoern/DokuQuanti/content/lib/Literatur.bib
+++ b/privat/bjoern/DokuQuanti/content/lib/Literatur.bib
@@ -23,7 +23,7 @@
   title = 	 {Informationsinfrastrukturen},
   author = 	 {Prof. Dr. Michael Löwe},
   address = 	 {FHDW Hannover, Freundalle 15, 30173 Hannover},
-  month = 	 {3},
+  month = 	 mar,
   year = 	 {2010}
 }
 
@@ -31,6 +31,6 @@
   title = 	 {Unterlagen zur Vorlesung Quantitative Forschungsmethoden (Statistik)},
   author = 	 {Dr. Sylvie Gasnier},
   address =  {FHDW Hannover, Freundalle 15, 30173 Hannover},
-  month = 	 {6},
+  month = 	 jun,
   year = 	 {2013}
 }
