--- a/privat/bjoern/DokuQuanti/content/sections/Einleitung.tex
+++ b/privat/bjoern/DokuQuanti/content/sections/Einleitung.tex
@@ -10,7 +10,7 @@ Die theoretischen Hintergründen werden anhand von praktischen Beispielen mit Hi
 Als Datenquelle dient hierfür der Münchner Mietspiegel aus dem Jahre 2003\footnote{\url{http://data.ub.uni-muenchen.de/2/1/miete03.asc}}.
 
 Um die statistische Auswertung zu erleichtern, müssen einige Vorarbeiten geleistet werden. Zunächst müssen pro Merkmalsart die verschiedenen Ausprägungen 
-analysiert werden. Hierbei entstehen ein Codeplan und eine Datenmatrix, welche als Grundlage für die folgenden Auswertungen dient. 
+analysiert werden. Hierbei entstehen ein Codeplan und eine Datenmatrix, welche als Grundlage für die folgenden Auswertungen dienen. 
 Auf die konkreten Ausprägungsarten wird zu einem späteren Zeitpunkt eingegangen. Um an die
 Ausprägungsarten herzuführen, werden in Abschnitt \ref{sec:defNot} zunächst Codeplan und Datenmatrix
 skizziert.
